Fixed padding, and missing elements in Clients are loving our app section

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -74,7 +74,7 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,,,,
+  "d-8": 2.13125em /// 34.1px,,,,,,,,,,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -184,47 +184,52 @@ $max-content-width: (
 ///     gap: map-get($map: $spacing-distance-relative, $key: 's-0-15');
 ///   }
 $spacing-distance-relative: (
+  /// 8px
   "s-0-15": 0.5em,
+  /// 9px
   "s-0-56": 0.5625em,
-  "s-0-62": 0.625em,
   /// 10px
+  "s-0-62": 0.625em,
+  /// 16px
   "s-1-1": 1em,
-  "s-1-06": 1.0625em,
   /// 17px
-  "s-1-25": 1.25em,
+  "s-1-06": 1.0625em,
   /// 20px
-  "s-1-37": 1.375em,
+  "s-1-25": 1.25em,
   /// 22px
-  "s-1-50": 1.5em,
+  "s-1-37": 1.375em,
   /// 24px
-  "s-1-87": 1.875em,
+  "s-1-50": 1.5em,
   /// 30px
-  "s-2-00": 2em,
+  "s-1-87": 1.875em,
   /// 32px
-  "s-2-25": 2.25em,
+  "s-2-00": 2em,
   /// 36px
-  "s-3-00": 3rem,
-  /// 48px
-  "s-2-50": 2.5em,
+  "s-2-25": 2.25em,
   /// 40px
-  "s-2-68": 2.6875em,
+  "s-2-50": 2.5em,
+  /// 48px
+  "s-3-00": 3rem,
   /// 43px
-  "s-3-31": 3.125em,
+  "s-2-68": 2.6875em,
   /// 50px
-  "s-3-43": 3.4375em,
+  "s-3-31": 3.125em,
   /// 55px
-  "s-3-50": 3.5em,
+  "s-3-43": 3.4375em,
   /// 56px
-  "s-4-68": 4.6875em,
+  "s-3-50": 3.5em,
   /// 75px
-  "s-5-62": 5.625em,
+  "s-4-68": 4.6875em,
   /// 90px
-  "s-6-25": 6.25em,
+  "s-5-62": 5.625em,
   /// 100px
+  "s-6-25": 6.25em,
+  /// 130px
   "s-8-12": 8.125em,
+  /// 133px
   "s-8-31": 8.3125em,
-  /// 133p
-  "s-9-37": 9.375em,
+  /// 150px
+  "s-9-37": 9.375em
 );
 
 /// @name spacing-distance-relative
@@ -264,6 +269,7 @@ $spacing-distance-base: (
 ///   }
 $border-radius: (
   "r-0-2": 0.25em,
+  /// 8px
   "r-0-3": 0.375em,
   /// 8px
   "r-0-5": 0.5em,
