--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -265,6 +265,8 @@ $spacing-distance-base: (
   "sb-0-18": 0.1875rem,
   /// 10px
   "sb-0-62": 0.625rem,
+  /// 16px
+  "sb-1-1": 1rem,
   /// 20px
   "sb-1-25": 1.25rem,
   "sb-1-50": 1.5rem,
